  3-Jun-2020  V0.990 Updating dependencies for rcsb.utils.validation and validation test conditions.
  4-Jun-2020  V0.991 Adding new flag for prerelease sequence availability
  5-Jun-2020  V0.992 Adding support for new enum DDL attributes.
 12-Jun-2020  V0.993 Adjustments to the labeling of site, occupancy and oberserved features
 17-Jun-2020  V0.994 Adjustments rcsb_repository_holdings_unreleased_entry collection
 18-Jun-2020  V0.995 Adding entity taxonomy count.
 25-Jun-2020  V0.996 Adding schema validation to automatically follow on from any load failures in mongo/PdbxLoader()
 25-Jun-2020  V0.997 Update dependencies
 30-Jun-2020  V0.998 Add partial reload of failed object salvage path
 10-Jul-2020  V0.999 Adding support for derivative branched entity methods
 15-Jul-2020  V1.100 Adding methods to export water counting statistics.
 28-Jul-2020  V1.200 Add stash server config options to example configuration file
 28-Jul-2020  V1.300 Tweak stash configuration
 30-Jul-2020  V1.400 Add PubChem and Pharos mapping
  5-Aug-2020  V1.500 Add carbohydrate content to rcsb_chem_comp_synonyms and rcsb_chem_comp_annotation
  8-Aug-2020  V1.610 Limit SIFTS summary data cached
 15-Aug-2020  V1.620 Update dependency version for CATH backup
 21-Aug-2020  V1.630 Turn on the carbohydrate type options.
 26-Aug-2020  V1.631 Adjust polymer type counting -
 29-Aug-2020  V1.632 Add fix for missing data collection resolution
 30-Aug-2020  V1.633 Fix issue with subcategory aggregates with unit cardinality
 10-Sep-2020  V1.634 Trap missing data type exception in schema construction
 24-Sep-2020  V1.635 Use alternative mapping from pdbx_poly_seq_scheme
  1-Oct-2020  V1.636 Change handling of chemical component synonyms
  7-Oct-2020  V1.637 Update sequence cluster data and config path
 12-Oct-2020  V1.638 Update modeled residue counts and add option to use selective internal enumerations.
 13-Oct-2020  V1.639 Update example data and configuration